<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#8d6e63"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo"
        android:id="@+id/logo"
        android:layout_marginTop="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textAppearance="?android:textAppearanceMedium"
            android:text="@string/nama"
            android:id="@+id/nama" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:text="@string/occupation"
            android:id="@+id/occupation" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal"
        android:gravity="left|center_vertical"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@android:drawable/ic_menu_call"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/phone"
            android:id="@+id/phone"
            android:layout_gravity="center_horizontal" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:drawableLeft="@android:drawable/ic_dialog_email"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/email"
            android:id="@+id/email"
            android:layout_gravity="center_horizontal" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal|bottom"
        android:orientation="vertical"
        android:layout_marginBottom="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:text="@string/office"
            android:id="@+id/office" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColor="@android:color/white"
            android:textAppearance="?android:textAppearanceSmall"
            android:text="@string/officeAddress"
            android:id="@+id/officeAddress" />

    </LinearLayout>

</LinearLayout>
